--- a/src/app/quote-edit/quote-edit.component.html
+++ b/src/app/quote-edit/quote-edit.component.html
@@ -3,7 +3,7 @@
     
     <form (ngSubmit)="save()">
     <div class="mb-3">
-        <label class="form-label">Titel:</label>
+        <label class="form-label">Text:</label>
         <input class="form-control" [(ngModel)]="quote.text" name="title" required />
     </div>
     <div class="mb-3">
